app-test/testdata/typesystem/neg/pattern-matching-alternative-pattern-type/src/patmat.cal
namespace patmat:
    actor AlternativePatternType() ==> int OUT:
        int a;
        do
            OUT <--
                case a of
                    true : 1 end // error
                    _ : 0 end
                end;
        end
    end
end